// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor panel--border"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <h2
          className="typo-systemtittel"
        >
          <span>
            Dine siste saker
          </span>
        </h2>
      </div>
      <p
        className="typo-normal oversiktspanel__header-lenketekst"
      >
        <a
          className="oversiktspanel__header-lenke"
          href="http://localhost:9222/saksoversikt/"
          id="dekorator-bottomborder-overstyring"
        >
          <span>
            Se alle dine saker (5)
          </span>
          <i
            className="nav-frontend-chevron chevronboks chevron--hoyre"
            id="oversiktspanel__chevron"
          />
        </a>
      </p>
    </div>
    <div>
      <hr />
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="sak-container"
      >
        <a
          className="sak-lenke"
          href="#"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn"
          >
            <span
              className="typo-undertittel"
            >
              Tema 1
            </span>
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-dato"
          >
            <span
              className="typo-undertekst"
            >
              <span>
                Sist oppdatert
              </span>
               
              <span>
                2019 M07 22
              </span>
               - 
              <span>
                Ferdig behandlet
              </span>
            </span>
          </div>
        </a>
      </div>
      <div
        className="sak-container"
      >
        <a
          className="sak-lenke"
          href="#"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn"
          >
            <span
              className="typo-undertittel"
            >
              Tema 2
            </span>
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-dato"
          >
            <span
              className="typo-undertekst"
            >
              <span>
                Sist oppdatert
              </span>
               
              <span>
                2019 M07 23
              </span>
               - 
              <span>
                Under behandling
              </span>
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="dittnav-lenkepanel-smaa"
    id="cols-layout"
  >
    <a
      className="lenkepanel dittnav-lenkepanel-smaa-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        />
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Dine utbetalinger
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      className="lenkepanel dittnav-lenkepanel-smaa-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        />
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Innboks
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="dittnav-lenkepanel-smaa"
    id={null}
  >
    <a
      className="lenkepanel dittnav-lenkepanel-smaa-item lenkepanel--border"
      href="http://localhost:9222/saksoversikt/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        />
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Dine saker
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      className="lenkepanel dittnav-lenkepanel-smaa-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        />
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Dine utbetalinger
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      className="lenkepanel dittnav-lenkepanel-smaa-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        />
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Innboks
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;
